[package]
name = "locust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-compression = { version = "0.4.0", features = [
  "tokio",
  "brotli",
  "gzip",
  "zlib",
  "zstd",
] }
async-trait = "0.1.67"
bstr = "1.0.0"
bytes = "1.0.0"
futures = "0.3.11"
headers = "0.3"
http = "0.2.0"
hyper = { version = "0.14.15", features = ["full"] }
hyper-proxy = { version = "0.9", default-features = false, features = [
  "rustls-webpki",
] }
hyper-rustls = { version = "0.24.0", default-features = false, features = [
  "http1",
  "logging",
  "tls12",
  "webpki-tokio",
] }
hyper-tls = { version = "0.5.0" }
hyper-tungstenite = "0.11.1"
moka = { version = "0.12.0", features = ["future"] }
openssl = { version = "0.10.39" }
rand = { version = "0.8.0" }
rcgen = { version = "0.12.0", features = ["x509-parser"] }
rustls = "0.22.2"
thiserror = "1.0.30"
time = { version = "0.3.7" }
tokio = { version = "1.24.2", features = ["full"] }
tokio-rustls = "0.24.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio-tungstenite = "0.20.0"
tokio-util = { version = "0.7.0", features = ["io"] }
tracing = { version = "0.1.23", features = ["log"] }
rustls-pemfile = "2.0.0"
tracing-subscriber = "0.3.0"
