[workspace]
members = ["locust-cli", "locust-core"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"

[package]
name = "locust"
repository = "https://github.com/maxmindlin/locust"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-trait = "0.1.67"
bstr = "1.0.0"
bytes = "1.0.0"
futures = "0.3.11"
headers = "0.3"
http = "0.2.0"
hyper = { version = "0.14.15", features = ["full"] }
hyper-proxy = { version = "0.9", default-features = false, features = [
  "rustls-webpki",
] }
hyper-rustls = { version = "0.24.0", default-features = false, features = [
  "http1",
  "logging",
  "tls12",
  "webpki-tokio",
] }
locust-core = { path = "./locust-core/" }
hyper-tungstenite = "0.11.1"
moka = { version = "0.12.0", features = ["future"] }
openssl = { version = "0.10.39", features = ["vendored"] }
rand = { version = "0.8.0" }
rcgen = { version = "0.12.0", features = ["x509-parser"] }
rustls = "0.22.2"
thiserror = "1.0.30"
time = { version = "0.3.7" }
tokio = { version = "1.24.2", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-tungstenite = "0.20.0"
tokio-util = { version = "0.7.0", features = ["io"] }
tracing = { version = "0.1.23", features = ["log"] }
rustls-pemfile = "2.0.0"
tracing-subscriber = "0.3.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
cookie = "0.18.0"
warp = "0.3.6"
reqwest = "0.11"
serde = "1.0"
serde_json = "1.0"
dotenv = "0.15"
telegraf = "0.6"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
