[package]
name = "locust-cli"
version = "0.3.1"
repository = "https://github.com/maxmindlin/locust"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
locust-core = { path = "../locust-core/" }
tokio = { version = "1.24.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
tabled = "0.15.0"
rayon = "1.8.1"
refinery = { version = "0.8", features = ["postgres"] }
urlencoding = "2.1.3"

[dependencies.uuid]
version = "1.7.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
